apps/manifests/cilium-extras/hubble-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: hubble-ui
spec:
  ingressClassName: contour
  rules:
    - host: hubble.bread.alleaffengaffen.ch
      http:
        paths:
          - backend:
              service:
                name: hubble-ui
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - hubble.bread.alleaffengaffen.ch
      secretName: hubble-ui-tls
